cli/tests/snapshot/inputs/errors/spanned_toml.ncl
# capture = 'stderr'
# command = ['eval']
let test = import "../../imports/package.toml" in
test | {
  package.name | String,
}
